--- a/home.html
+++ b/home.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>My Personal Website</title>
 	<link rel="shortcut icon" href="images/virus.png" type="images/x-icon" />
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body background="images/bgportrait1.png">
 	<h1 align="center"><font face="Century Gothic" color="white">MY PERSONAL WEBSITE</font></h1>
