--- a/home.html
+++ b/home.html
@@ -15,7 +15,7 @@
 			<tr>
 				<td align="center">
 				<h1><font face="Book Antiqua" color="white" size="40px">HELLO <br>I'M MICHAEL S. DELOS REYES</font></h1>
-					<hr class="1">
+					<hr class="dots">
 					<font face="New Century Schoolbook" color="white" size="5px">
 					<i> BSIT Student <br>
 					College of Computing Science <br>
